Update: fixing unreadable font

--- a/css/styles.css
+++ b/css/styles.css
@@ -846,8 +846,8 @@ section {
   display: inline-flex;
   align-items: center;
   border: 1px solid var(--border-light);
-  color: #ffffff;
-  background: var(--off-white);
+  color: #000000;
+  background: #ffffffff;
   transition:
     background 0.15s,
     border-color 0.15s;
